# git-learn

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docker/linux/: Dockerfile
docs/plans/: 2026-02-18-git-terminal-trainer-design.md  2026-02-18-git-terminal-trainer.md
lessons/beginner/: 01-init.md  02-editing.md  03-staging.md  04-selective-add.md  05-commit.md  06-log.md  07-diff.md  08-graph-alias.md
lessons/git/advanced/: 01-amend.md  02-cherry-pick.md  03-rebase-interactive.md  04-restore-file.md  05-reflog.md  06-rebase-vs-merge.md
lessons/git/beginner/: 02-editing.md  03-staging.md  04-selective-add.md  05-commit.md  07-diff.md
lessons/git/expert/: 01-feature-branch.md  02-rebase-workflow.md  03-worktrees.md  04-submodules.md  05-interactive-staging.md  06-hooks.md  07-emergency.md
lessons/git/remotes/: 01-clone.md  02-push-pull.md  03-push-rejected.md  04-tags.md  05-fetch.md  06-upstream.md
lessons/git/stash/: 01-stash-basics.md  02-stash-message.md  03-bisect.md  04-blame.md  05-clean.md
lessons/linux/files/: 01-create-copy.md  02-remove-link.md  03-wildcards.md
lessons/linux/navigation/: 01-pwd-ls.md  (+2 more)
src/git_learn/: __main__.py  app.py  lesson_loader.py  progress.py  setup_exercise.py  shell.py
src/terminal_learn/: __init__.py  __main__.py  app.py  lesson_loader.py  module_config.py  progress.py  setup_exercise.py  shell.py
tests/: conftest.py  test_app.py  test_integration.py  test_lesson_loader.py  test_linux_integration.py  test_progress.py  test_setup_exercise.py  test_shell.py  test_validators.py  test_validators_special.py
(+30 files in other folders)
