[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terminal-learn"
version = "0.1.0"
description = "Interactive terminal trainer for Git, Linux, and more"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.50.0",
    "click>=8.1.0",
    "PyYAML>=6.0",
    "python-frontmatter>=1.1.0",
    "GitPython>=3.1.0",
]

[project.scripts]
terminal-learn = "terminal_learn.__main__:cli"
git-learn = "terminal_learn.__main__:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
]
docker = [
    "docker>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
